start revamping website

--- a/intro.html
+++ b/intro.html
@@ -4,7 +4,7 @@ layout : default
 ---
 
 <img src="images/profile.jpg"/>
-<p>I'm a Rising Junior at Olin College of Engineering.</p>
+<p>I'm a Senior at Olin College of Engineering, class of 2019.</p>
 <p>My core interests are Robotics -- all aspects of Robotics, encompassing software, electrical, and mechanical
     components, are fascinating to me.</p>
 <p>My experiences include Machine Learning, Computer Vision, Computer Graphics, App Development, Robot
