--- a/research.html
+++ b/research.html
@@ -20,6 +20,11 @@ layout : default
 	<ul>
 		<li><a href="https://github.com/Olin-Aero/iarc-2017/tree/master/iarc_sim_2d">Fast 2D Simulation Engine (C++/QT)</a></li>
 		<li><a href="https://github.com/Olin-Aero/iarc-2017/tree/master/iarc_sim_3d">High Fidelity Gazebo Simulation</a></li>
-		<li><a href="https://github.com/Olin-Aero/iarc-2017/tree/filter2/iarc_roombafilter">Multi-Target Model-based Kalman Filter</a></li>
+		<li><a href="https://github.com/Olin-Aero/iarc-2017/tree/master/iarc_roombafilter">Multi-Target Model-based Kalman Filter</a></li>
+	</ul>
+	<li><a href="https://github.com/olinrobotics/Powered-Mobility">Powered Mobility Project [Summer 2018]</a></li>
+	<ul>
+		<li>ROS-based shared autonomy suite development on powered wheelchair augmentation</li>
+		<li>Integration of autonomous perception, localization and navigation capability on commercial mobile platforms</li>
 	</ul>
 </ul>
