--- a/intro.html
+++ b/intro.html
@@ -15,7 +15,7 @@ layout : default
 
         <p><strong>Yoonyoung (Jamie) Cho</strong> | Robotics Software Engineer</p>
 
-        <p>Olin College of Engineering | class of 2019</p>
+        <p>Olin College of Engineering | Class of 2019</p>
 
         <p>
             I'm currently a senior at Olin College of Engineering.
