start new research section...

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ layout : index
     //$(document).ready(function(){
     var size = 784;
     var draw = SVG('drawing').size(size, size);
-    var subjects = ['Intro', 'Academics', 'Projects', 'Research', 'Personal'];
-    var links = ['./intro', './Academics', 'projects', 'research', 'personal'];
+    var subjects = ['Intro', 'Academics', 'Projects', 'Research', 'Research (Old)', 'Personal'];
+    var links = ['./intro', './Academics', 'projects', 'research', 'research-old', 'personal'];
     var cx = size / 2;
     var cy = size / 2;
     var r = size / 3;
