--- a/research.html
+++ b/research.html
@@ -59,7 +59,7 @@ layout : default
       <div id="filters" class="button-group">
         <!-- <button class="button" data-filter="*">Show All</button> -->
         <!-- <button class="button is-checked" data-filter=".highlight">Highlights</button> -->
-        <button class="button" data-filter=".publication">Research</button>
+        <button class="button is-checked" data-filter=".publication">Research</button>
         <!--<button class="button" data-filter=".talk">Talks</button> -->
         <!--<button class="button" data-filter=".misc">Misc</button>-->
       </div>
