--- a/research.html
+++ b/research.html
@@ -59,7 +59,7 @@ layout : default
       <div id="filters" class="button-group">
         <!-- <button class="button" data-filter="*">Show All</button> -->
         <!-- <button class="button is-checked" data-filter=".highlight">Highlights</button> -->
-        <button class="button is-checked" data-filter=".publication">Research</button>
+        <button class="button " data-filter=".publication">Research</button>
         <!--<button class="button" data-filter=".talk">Talks</button> -->
         <!--<button class="button" data-filter=".misc">Misc</button>-->
       </div>
@@ -166,7 +166,7 @@ layout : default
         // Retrieve cached button click.
         var defaultFilterValue = localStorage.getItem('filterValue');
         if (defaultFilterValue == null) {
-          defaultFilterValue = ".highlight"
+          defaultFilterValue = ".publication"
         }
         $grid.isotope({ filter: defaultFilterValue });
         var buttons = document.getElementsByClassName("button");
