--- a/research.html
+++ b/research.html
@@ -68,6 +68,23 @@ layout : default
 
         <!-- Publications -->
         <div class="list-item publication" data-category="publication">
+          <a href="https://kiwi-sherbet.github.io/PRESTO/" class="thumbnail">
+            <img src="images/icra2025-presto.png" alt="" />
+          </a>
+          <div class="project-description">
+            <h3><a href="https://arxiv.org/abs/2409.16012">PRESTO: Fast motion planning using diffusion models based on key-configuration environment representation</a></h3>
+            <p>
+              Mingyo Seo*, Yoonyoung Cho*, Yoonchang Sung, Peter Stone, Yuke Zhu, Beomjoon Kim<br>
+                <i>International Conference on Robotics and Automation (ICRA), 2025.</i><br>
+                <a href="https://kiwi-sherbet.github.io/PRESTO/">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                <a href="https://github.com/kiwi-sherbet/PRESTO">Github</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                <a href="https://arxiv.org/abs/2409.16012">PDF</a>
+                <br> <!-- TODO: extra spaces until I figure out the margin bug. -->
+            </p>
+          </div>
+        </div>
+
+        <div class="list-item publication" data-category="publication">
           <a href="https://sites.google.com/view/contact-non-prehensile" class="thumbnail">
             <img src="https://img.youtube.com/vi/TQE-Wku_2sk/0.jpg" alt="" />
           </a>
@@ -76,7 +93,6 @@ layout : default
             <p>
               Yoonyoung Cho, Junhyek Han, Yoontae Cho, Beomjoon Kim<br>
                 <i>International Conference on Learning Representations (ICLR), 2024.</i><br>
-                <!-- <a href="https://video-language-planning.github.io/">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
                 <a href="https://sites.google.com/view/contact-non-prehensile">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                 <a href="https://github.com/iMSquared/corn">Github</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                 <a href="https://arxiv.org/abs/2403.10760">PDF</a>
