--- a/research.html
+++ b/research.html
@@ -68,6 +68,23 @@ layout : default
 
         <!-- Publications -->
         <div class="list-item publication" data-category="publication">
+          <a href="https://unicorn-hamnet.github.io/" class="thumbnail">
+            <img src="images/rss2025-hamnet.png" alt="" />
+          </a>
+          <div class="project-description">
+            <h3><a href="https://arxiv.org/abs/2502.20843">Hierarchical and Modular Network on Non-prehensile Manipulation in General Environments</a></h3>
+            <p>
+              Yoonyoung Cho*, Junhyek Han*, Jisu Han, Beomjoon Kim<br>
+                <i>Robotics: Science and Systems (RSS), 2025. </i><br>
+                <a href="https://unicorn-hamnet.github.io/">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                <!--<a href="https://unicorn-hamnet.github.io/">Github</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;-->
+                <a href="https://arxiv.org/abs/2502.20843">PDF</a>
+                <br> <!-- TODO: extra spaces until I figure out the margin bug. -->
+            </p>
+          </div>
+        </div>
+
+        <div class="list-item publication" data-category="publication">
           <a href="https://kiwi-sherbet.github.io/PRESTO/" class="thumbnail">
             <img src="images/icra2025-presto.png" alt="" />
           </a>
